# FinSight

./: .gitignore  CONTRIBUTING.md  README.md  my_config.yaml  pyproject.toml  requirements.txt  run_report.py  run_report_custom.py
demo/backend/: app.py
demo/frontend/: package-lock.json
docs/: ADVANCED_USAGE.md
docs/example_configs/: my_config_company.yaml  my_config_industry.yaml
src/agents/: base_agent.py
src/agents/data_analyzer/: data_analyzer.py
src/agents/data_analyzer/prompts/: financial_prompts.yaml  general_prompts.yaml
src/agents/data_collector/: data_collector.py
src/agents/data_collector/prompts/: prompts.yaml
src/agents/report_generator/: report_class.py  report_generator.py
src/agents/report_generator/prompts/: financial_company_prompts.yaml  financial_industry_prompts.yaml
src/agents/search_agent/: search_agent.py
src/agents/search_agent/prompts/: general_prompts.yaml
src/config/: config.py  default_config.yaml
src/plugins/: __init__.py
src/tools/: __init__.py  base.py
src/tools/financial/: company_statements.py  stock.py  us_market.py
src/tools/macro/: us_macro.py
src/tools/web/: search_engine_requests.py  web_crawler.py
src/utils/: async_bridge.py  code_executor_async.py  figure_helper.py  helper.py  llm.py  logger.py  prompt_loader.py  rate_limiter.py
tests/: conftest.py  test_async_bridge.py  test_dynamic_date.py  test_llm_retry.py  test_memory.py  test_parse_llm.py  test_plugin_loader.py  test_rate_limiter.py  test_sandbox.py  test_tool_base.py  test_tool_registry.py  test_us_macro.py  test_us_market.py
tests/agents/: reload_agent.ipynb  test_data_analyzer.py
tests/basic_components/: test_tool.py
